--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src"]
 	path = src
 	url = https://github.com/vim/vim.git
+[submodule "autoload"]
+	path = autoload
+	url = https://github.com/tpope/vim-pathogen.git
