--- a/.gitmodules
+++ b/.gitmodules
@@ -19,9 +19,6 @@
 [submodule "bundle/vim-tmux-focus-events"]
 	path = bundle/vim-tmux-focus-events
 	url = https://github.com/tmux-plugins/vim-tmux-focus-events.git
-[submodule "/home/brice/.vim/bundle/vim-better-whitespace"]
-	path = /home/brice/.vim/bundle/vim-better-whitespace
-	url = git://github.com/ntpeters/vim-better-whitespace.git
 [submodule "bundle/vim-obsession"]
 	path = bundle/vim-obsession
-	url = git://github.com/tpope/vim-obsession.git
+	url = https://github.com/tpope/vim-obsession.git
